--- a/_posts/2020-01-02-the-us-narrative-today.html
+++ b/_posts/2020-01-02-the-us-narrative-today.html
@@ -1728,107 +1728,107 @@ stories:
   domain: http://www.dailypress.com/
   link: http://www.dailypress.com/news/crime/dp-nw-officer-involved-shooting-20191230-dfwwzkyfk5cgjhwuu7pdehtkii-story.html
 images:
-- name: supreme-court-supremecourt-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-sunday.jpg
-- name: white-house-lawn-white-house-lawn-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-kand-two.jpg
-- name: braceros-domingo-ulloa-hallway-mirrors-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-hallway-mirrors-hotel.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-yellow-paper.jpg
-- name: curtain-curtain-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-bright-sand.jpg
-- name: trucksilo-trucksilo-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-creativity.jpg
-- name: containership-containership-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-constitution.jpg
-- name: braceros-domingo-ulloa-desert-road-mountains.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-desert-road-mountains.jpg
-- name: bf-skinner-roman-marcus-looking-down.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-roman-marcus-looking-down.jpg
-- name: stalin-time-whie-house-close-up-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-whie-house-close-up-2.jpg
-- name: legal-statue-legalstatue-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-oily-mcoilface.jpg
-- name: sand-hand-sand-hand-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-circuit-4.jpg
-- name: lincoln-memorial-lincolnmemorial-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-space-pizza.jpg
+- name: legal-statue-legalstatue-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-electricity.jpg
+- name: nazi-invasion-capital_36728420065_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-capital_36728420065_o.jpg
+- name: liberty-back-statue-liberty-back.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back.jpg
+- name: status-berlin-status-berlin-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-copper-circuit-2.jpg
+- name: supreme-court-supremecourt-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crabapple.jpg
+- name: oldhotel-oldhotel-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-alberto-giacometti.jpg
+- name: power-lines-power-lines-empty-space-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-deep-connections.jpg
+- name: oldhousecars-house-old-cars-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-spagetti-accident.jpg
+- name: old-school-house-old-schoolhouse-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-copper-circuit-2.jpg
+- name: gypsymosaic-gypsy-eyes-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-purple-pond.jpg
+- name: white-house-lawn-white-house-window-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-constitution.jpg
+- name: aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
+- name: amusement-park-amusement-park-2-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-emily-carr.jpg
+- name: walled-garden-walled-garden-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-colorful-dream.jpg
+- name: bf-skinner-cargo-ship_36587814601_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-cargo-ship_36587814601_o.jpg
+- name: oldcabin-oldcabin-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-bright-sand.jpg
+- name: stories-gears-numbers-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-gears-numbers-blue.jpg
+- name: la-muse-cemetery_35902984304_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-cemetery_35902984304_o.jpg
+- name: bf-skinner-japanese-garden-tree.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-japanese-garden-tree.jpg
+- name: old-house-oldhouse-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-purple-storm.jpg
+- name: gears-4882162452-fa3126b38d-b-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-bright-sand.jpg
+- name: braceros-domingo-ulloa-train-tracks-seattle-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-tracks-seattle-waterfront.jpg
+- name: miamibeach-miamibeach-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-circuit.jpg
+- name: downtown-los-angeles-downtown-la-dali-three.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dali-three.JPG
+- name: aws-s3-stories-capitolbattle-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-capitolbattle-blue-circuit.jpg
+- name: walled-garden-walled-garden-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-monet-one.jpg
+- name: store-on-corner-oldcabin-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-gan-vogh.jpg
+- name: bf-skinner-nyc-subway-train-125th.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-nyc-subway-train-125th.jpg
+- name: dc-statue-dcstatue-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-graham-sutherland.jpg
+- name: mistywoods-babyfoot-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-gred-mash.jpg
+- name: ""
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/
+- name: meadowbutterfly-meadow-butterfly-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-post-modern.jpg
+- name: oldcabin-store-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-purple-storm.jpg
 - name: old-granary-field-granaryfield-deep-connections.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-deep-connections.jpg
-- name: stalin-time-old-church_36588495271_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-church_36588495271_o.jpg
-- name: adam-smith-adam-smith-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-jap-wav-pr.jpg
-- name: bordercrossing-bordercrossing-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-purple-storm.jpg
-- name: blossombar-colorful-dream-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-dream-file-00-00-00-00.jpg
-- name: containership-containership-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-matrix.jpg
-- name: miamibeach-miamibeach-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-yellow-paper.jpg
-- name: power-lines-power-lines-empty-space-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-brush.jpg
-- name: dc-statue-dcstatue-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-post-modern.jpg
-- name: white-house-whitehouse-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-blue-circuit.jpg
-- name: san-francisco-street-view-san-francisco-street-view-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-propaganda-leaflets.jpg
-- name: old-granary-field-oldhouse-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colorful-dream.jpg
-- name: la-muse-nyc-skyline-from-ferry.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-nyc-skyline-from-ferry.jpg
-- name: old-door-lock-old-door-lock-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-far-away.jpg
-- name: school-clouds-church-clouds-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-light-dali.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-china-prop.jpg
-- name: oldhotel-oldhotel-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-satan-red.jpg
-- name: abandonedbuildings_graham_sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_graham_sutherland.jpg
-- name: wind-mills-windmills-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-green-zuma.jpg
-- name: cargo-ship-cargo-ship-on-sea-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dali-two.jpg
-- name: berlinwall-DSC-0084-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-gred-mash.jpg
-- name: flower-barbed-wire-flower-barbed-wire-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dark-rain.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-crunch-paper.jpg
-- name: ellis-island-ellisisland-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-deep-connections.jpg
-- name: capital-battle-capitolbattle-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dali-two.jpg
-- name: blossombar-gred-mash-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gred-mash-file-00-00-00-00.jpg
-- name: window-window-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-matrix.jpg
-- name: server-racks-door.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door.jpg
-- name: oldsmallboat-oldsmallboat-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-purple-storm.jpg
-- name: supreme-court-supremecourt-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-green-zuma.jpg
-- name: gypsymosaic-gypsy-eyes-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-yellow-collage.jpg
-- name: stories-adam-smith-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-adam-smith-blue-circuit.jpg
-- name: subway-subway-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-crafty-painting.jpg
-- name: downtown-trucksilo-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-mucha-mult.jpg
-- name: oldhouse-oldhouse-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-ww2-color.jpg
-- name: hollywood-building-hollywood-building-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-soul.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-brush.jpg
-- name: copper-circuit-statue-liberty-clouds-front-far.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-liberty-clouds-front-far.jpg
+- name: 35562068104_fa20c57575-scream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-scream.jpg
+- name: aws-s3-square-77-33-800-500-0-max-0--5--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-77-33-800-500-0-max-0--5--1-square.jpg
+- name: curtain-curtain-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-gan-vogh.jpg
+- name: stories-white-man-burning-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-white-man-burning-down.jpg
+- name: downtown-los-angeles-downtown-la-yellow-collage.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-yellow-collage.JPG
+- name: beach-clouds-lifeguard-beachclouds-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-yellow-paper.jpg
+- name: containership-containership-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-constitution.jpg
+- name: power-lines-power-lines-empty-space-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dark-soul.jpg
+- name: bf-skinner-working-on-railroad-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-working-on-railroad-1.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-ww2-color.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-ww2-color.png
+- name: curtain-curtain-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-pablo-blue.jpg
+- name: stalin-time-old-piano-playing-hospital.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-piano-playing-hospital.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-kandinsky-bv.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-kandinsky-bv.JPG
+- name: white-house-lawn-white-house-lawn-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-brush.jpg
+- name: aws-s3-stories-carryload-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-carryload-diego-rivera1.jpg
+- name: copper-circuit-old-train-on-tracks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-train-on-tracks.jpg
+- name: stalin-time-train-car_35892468014_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-car_35892468014_o.jpg
 ---
 Uber Driver Graduates College After Passenger Pays Debt.&nbsp;Johnson Lifts Minnesota Over Auburn In Outback.&nbsp;Woman Arrested After Punching Boyfriend.&nbsp;Martin Scorsese Is 'embracing' Death.&nbsp;City Prepares For A New Public Works Building.&nbsp;Sovereign Citizens Not Above The Law.&nbsp;Man Suffers Burns In Fire At West First Street Residence.&nbsp;Ladysmith Schools Mull Building, Athletic Complex Funding Options.&nbsp;
