--- a/_posts/2020-01-02-the-us-narrative-today.html
+++ b/_posts/2020-01-02-the-us-narrative-today.html
@@ -1728,107 +1728,107 @@ stories:
   domain: http://www.dailypress.com/
   link: http://www.dailypress.com/news/crime/dp-nw-officer-involved-shooting-20191230-dfwwzkyfk5cgjhwuu7pdehtkii-story.html
 images:
-- name: legal-statue-legalstatue-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-electricity.jpg
-- name: nazi-invasion-capital_36728420065_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-capital_36728420065_o.jpg
-- name: liberty-back-statue-liberty-back.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back.jpg
-- name: status-berlin-status-berlin-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-copper-circuit-2.jpg
-- name: supreme-court-supremecourt-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crabapple.jpg
-- name: oldhotel-oldhotel-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-alberto-giacometti.jpg
-- name: power-lines-power-lines-empty-space-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-deep-connections.jpg
-- name: oldhousecars-house-old-cars-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-spagetti-accident.jpg
-- name: old-school-house-old-schoolhouse-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-copper-circuit-2.jpg
-- name: gypsymosaic-gypsy-eyes-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-purple-pond.jpg
-- name: white-house-lawn-white-house-window-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-constitution.jpg
-- name: aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
-- name: amusement-park-amusement-park-2-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-emily-carr.jpg
-- name: walled-garden-walled-garden-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-colorful-dream.jpg
-- name: bf-skinner-cargo-ship_36587814601_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-cargo-ship_36587814601_o.jpg
-- name: oldcabin-oldcabin-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-bright-sand.jpg
-- name: stories-gears-numbers-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-gears-numbers-blue.jpg
-- name: la-muse-cemetery_35902984304_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-cemetery_35902984304_o.jpg
-- name: bf-skinner-japanese-garden-tree.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-japanese-garden-tree.jpg
-- name: old-house-oldhouse-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-purple-storm.jpg
-- name: gears-4882162452-fa3126b38d-b-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-bright-sand.jpg
-- name: braceros-domingo-ulloa-train-tracks-seattle-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-tracks-seattle-waterfront.jpg
-- name: miamibeach-miamibeach-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-circuit.jpg
-- name: downtown-los-angeles-downtown-la-dali-three.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dali-three.JPG
-- name: aws-s3-stories-capitolbattle-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-capitolbattle-blue-circuit.jpg
-- name: walled-garden-walled-garden-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-monet-one.jpg
-- name: store-on-corner-oldcabin-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-gan-vogh.jpg
-- name: bf-skinner-nyc-subway-train-125th.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-nyc-subway-train-125th.jpg
-- name: dc-statue-dcstatue-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-graham-sutherland.jpg
-- name: mistywoods-babyfoot-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-gred-mash.jpg
-- name: ""
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/
-- name: meadowbutterfly-meadow-butterfly-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-post-modern.jpg
-- name: oldcabin-store-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-purple-storm.jpg
-- name: old-granary-field-granaryfield-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-deep-connections.jpg
-- name: 35562068104_fa20c57575-scream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-scream.jpg
-- name: aws-s3-square-77-33-800-500-0-max-0--5--1-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-77-33-800-500-0-max-0--5--1-square.jpg
-- name: curtain-curtain-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-gan-vogh.jpg
-- name: stories-white-man-burning-down.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-white-man-burning-down.jpg
-- name: downtown-los-angeles-downtown-la-yellow-collage.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-yellow-collage.JPG
-- name: beach-clouds-lifeguard-beachclouds-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-yellow-paper.jpg
-- name: containership-containership-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-constitution.jpg
-- name: power-lines-power-lines-empty-space-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dark-soul.jpg
-- name: bf-skinner-working-on-railroad-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-working-on-railroad-1.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-ww2-color.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-ww2-color.png
-- name: curtain-curtain-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-pablo-blue.jpg
-- name: stalin-time-old-piano-playing-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-piano-playing-hospital.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-kandinsky-bv.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-kandinsky-bv.JPG
-- name: white-house-lawn-white-house-lawn-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-brush.jpg
-- name: aws-s3-stories-carryload-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-carryload-diego-rivera1.jpg
-- name: copper-circuit-old-train-on-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-train-on-tracks.jpg
-- name: stalin-time-train-car_35892468014_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-car_35892468014_o.jpg
+- name: bluelake-purp-paper-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-purp-paper-file-00-00-00-00.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-sand-paper.jpg
+- name: nazi-invasion-IMG_8353.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8353.jpg
+- name: la-muse-fire-truck-pulling-out-of-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-fire-truck-pulling-out-of-station.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-colorful-blocks.jpg
+- name: rockingchair-rockingchair-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-light-dali.jpg
+- name: castle-wall-DSC-0067-post-modern.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-post-modern.JPG
+- name: machine-learning-gun-patent.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-learning-gun-patent.jpg
+- name: fence-fence-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-deep-connections.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-jap-dys-1.jpg
+- name: status-berlin-status-berlin-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-pablo-blue.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit.jpg
+- name: power-lines-power-lines-empty-space-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-far-away.jpg
+- name: store-on-corner-oldcabin-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-creativity.jpg
+- name: adam-smith-adam-smith-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-crafty-painting.jpg
+- name: server-cloud-server-racks-clouds-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-horiz-circuit.jpg
+- name: machine-road-machine-road-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-purple-pond.jpg
+- name: oldhouse-oldhouse-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-copper-circuit.jpg
+- name: adam-smith-adam-smith-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-copper-circuit-2.jpg
+- name: braceros-domingo-ulloa-los-angeles-downtown-from-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-los-angeles-downtown-from-afar.jpg
+- name: braceros-domingo-ulloa-border-down-the-fence-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-border-down-the-fence-line.jpg
+- name: border-fence-border-fence-on-hill-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-colored-circuits.jpg
+- name: bf-skinner-castle-on-the-hill-windows.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-castle-on-the-hill-windows.jpg
+- name: docks-docks-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dark-soul.jpg
+- name: beach-rocks-beach-rocks-currents-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-attack-planes.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
+- name: berlinwall-DSC-0084-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-matrix.jpg
+- name: oldhotel-oldhotel-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dry-skin.jpg
+- name: copper-circuit-cannon_36556797762_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cannon_36556797762_o.jpg
+- name: store-on-corner-oldcabin-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dali-two.jpg
+- name: scream-IMG_7916.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7916.jpg
+- name: power-lines-power-lines-empty-space-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-atari-missle.jpg
+- name: docks-docks-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-copper-circuit.jpg
+- name: crow-crow-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-sunday.jpg
+- name: oldsmallboat-oldsmallboat-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-mucha-mult.jpg
+- name: docks-docks-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dali-two.jpg
+- name: old-school-house-old-schoolhouse-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-propaganda-leaflets.jpg
+- name: machine-road-machine-road-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-rainbow-festival.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-wols.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-wols.png
+- name: berlinwall-DSC-0084-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-monet-one.jpg
+- name: oldsmallboat-oldsmallboat-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dark-soul.jpg
+- name: server-cloud-server-racks-clouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit.jpg
+- name: old-granary-field-granaryfield-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-creativity.jpg
+- name: christianity-christianity-under-construction-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dark-soul.jpg
+- name: abe-lincoln-one-rainbow-festival-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-15-87.jpg
+- name: store-on-corner-store-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-colorful-blocks.jpg
+- name: window-window-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dark-soul.jpg
+- name: bf-skinner-destruction-seattle-viaduct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-destruction-seattle-viaduct.jpg
+- name: trucksilo-trucksilo-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-satan-red.jpg
+- name: san-francisco-street-view-san-francisco-street-view-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-circuit-4.jpg
+- name: white-house-lawn-white-house-window-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-rain.jpg
 ---
 Uber Driver Graduates College After Passenger Pays Debt.&nbsp;Johnson Lifts Minnesota Over Auburn In Outback.&nbsp;Woman Arrested After Punching Boyfriend.&nbsp;Martin Scorsese Is 'embracing' Death.&nbsp;City Prepares For A New Public Works Building.&nbsp;Sovereign Citizens Not Above The Law.&nbsp;Man Suffers Burns In Fire At West First Street Residence.&nbsp;Ladysmith Schools Mull Building, Athletic Complex Funding Options.&nbsp;
